Swagger routes update
